# Virtual-Machine

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt  virtual_machine_docs.md
.github/workflows/: ci.yml
Schema/: README.md  schema.sql  user.schema.json  virtual_machine.schema.json
docs/adr/: 0001-separate-assembler-vm-and-disassembler.md
examples/: arithmetic.asm  bad_div_zero.asm  bad_jump.asm  bad_stack_underflow.asm  factorial.asm  fibonacci.asm  if_else.asm  loop.asm
src/pvm/: __init__.py  __main__.py  assembler.py  bytecode.py  cli.py  disassembler.py  errors.py  format.py  names.py  opcodes.py  program.py  validate.py  vm.py
tests/: test_assembler.py  test_assembler_internals.py  test_bytecode.py  test_bytecode_reader.py  test_cli.py  test_cli_internals.py  test_disassembler.py  test_disassembler_exhaustive.py  test_errors.py  test_errors_hierarchy.py  test_format.py  test_format_and_defense.py  test_names.py  test_opcode_specs.py  test_opcodes.py  test_program.py  test_programs.py  test_public_api.py  test_validate.py  test_validate_exhaustive.py  test_vm.py  test_vm_handlers.py  test_vm_internals.py
