[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "python-pvm"
version = "1.0.5"
description = "A small stack-based virtual machine with assembler, bytecode, and CLI tooling"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Princeton Afeez" }]
keywords = ["virtual-machine", "assembler", "bytecode", "interpreter", "stack-machine"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Interpreters",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Documentation = "README.md"
Changelog = "CHANGELOG.md"
License = "LICENSE"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.5",
]

[project.scripts]
pvm = "pvm.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
pvm = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
files = ["src/pvm"]
strict = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.coverage.run]
source = ["pvm"]
omit = ["*/__main__.py"]

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_empty = true

